tests/ui/mismatched_types/hr-projection-mismatch.current.stderr
error[E0308]: mismatched types
  --> $DIR/hr-projection-mismatch.rs:20:5
   |
LL |     wrap::<_, Thing>();
   |     ^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected reference `&'a _`
              found reference `&_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
